--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,12 @@
     "iron-input": "PolymerElements/iron-input#1 - 2",
     "paper-input": "PolymerElements/paper-input#1 - 2",
     "paper-styles": "PolymerElements/paper-styles#1 - 2",
-    "polymer": "Polymer/polymer#1.9 - 2"
+    "polymer": "Polymer/polymer#1.9 - 2",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1 - 2",
+    "paper-listbox": "PolymerElements/paper-listbox#^1 - 2",
+    "paper-item": "PolymerElements/paper-item#^1 - 2",
+    "neon-animation": "PolymerElements/neon-animation#^1 - 2",
+    "web-animations-js": "web-animations/web-animations-js#^2.3.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
@@ -43,7 +48,12 @@
         "iron-input": "PolymerElements/iron-input#^1.0.0",
         "paper-input": "PolymerElements/paper-input#^1.0.0",
         "paper-styles": "PolymerElements/paper-styles#^1.0.0",
-        "polymer": "Polymer/polymer#^1.2.0"
+        "polymer": "Polymer/polymer#^1.2.0",
+        "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.0.0",
+        "paper-listbox": "PolymerElements/paper-listbox#^1.0.0",
+        "paper-item": "PolymerElements/paper-item#^1.0.0",
+        "neon-animation": "PolymerElements/neon-animation#^1.0.0",
+        "web-animations-js": "web-animations/web-animations-js#^2.3.1"
       },
       "devDependencies": {
         "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
