--- a/bower.json
+++ b/bower.json
@@ -27,10 +27,10 @@
     "paper-input": "PolymerElements/paper-input#1 - 2",
     "paper-styles": "PolymerElements/paper-styles#1 - 2",
     "polymer": "Polymer/polymer#1.9 - 2",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1 - 2",
-    "paper-listbox": "PolymerElements/paper-listbox#^1 - 2",
-    "paper-item": "PolymerElements/paper-item#^1 - 2",
-    "neon-animation": "PolymerElements/neon-animation#^1 - 2",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#1 - 2",
+    "paper-listbox": "PolymerElements/paper-listbox#1 - 2",
+    "paper-item": "PolymerElements/paper-item#1 - 2",
+    "neon-animation": "PolymerElements/neon-animation#1 - 2",
     "web-animations-js": "web-animations/web-animations-js#^2.3.1"
   },
   "devDependencies": {
